sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:18: error: Unmatched closing brace '}' ignored here
}
^