sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var len=getValueCount()
  var gap=getValueCount()
  while(gap>1){
    gap = (gap.toDouble / 1.3).toInt
  	i=0
      while(i+gap<len){
    		if(isSmaller(i+gap,i)){
          swap(i,i+gap)
          i+=1
        }
  }}
  }
}